// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PersonalityTraitList renders component 1`] = `
<div
  className="container"
>
  <div
    className="mock"
  >
    Trait - 
    Steady
  </div>
  <div
    className="mock"
  >
    Trait - 
    Forgiving
  </div>
  <div
    className="mock"
  >
    Trait - 
    Can Delay Gratification
  </div>
  <div
    className="mock"
  >
    Trait - 
    Compassionate
  </div>
  <div
    className="mock"
  >
    Trait - 
    Thrill-Seeking
  </div>
  <div
    className="mock"
  >
    Trait - 
    Confident
  </div>
  <div
    className="mock"
  >
    Trait - 
    Imaginative
  </div>
  <div
    className="mock"
  >
    Trait - 
    Open-Minded
  </div>
  <div
    className="center"
  >
    <button
      className="toggle"
      onClick={[Function]}
      type="button"
    >
      Show More
    </button>
  </div>
</div>
`;

exports[`PersonalityTraitList renders component with headers 1`] = `
<div
  className="container"
>
  <div
    className="sectionHeading"
  >
    Personality Traits
  </div>
  <div
    className="p"
  >
    Here are your top 8 traits measured on a scale of 0% to 100%
  </div>
  <div
    className="mock"
  >
    Trait - 
    Steady
  </div>
  <div
    className="mock"
  >
    Trait - 
    Forgiving
  </div>
  <div
    className="mock"
  >
    Trait - 
    Can Delay Gratification
  </div>
  <div
    className="mock"
  >
    Trait - 
    Compassionate
  </div>
  <div
    className="mock"
  >
    Trait - 
    Thrill-Seeking
  </div>
  <div
    className="mock"
  >
    Trait - 
    Confident
  </div>
  <div
    className="mock"
  >
    Trait - 
    Imaginative
  </div>
  <div
    className="mock"
  >
    Trait - 
    Open-Minded
  </div>
  <div
    className="center"
  >
    <button
      className="toggle"
      onClick={[Function]}
      type="button"
    >
      Show More
    </button>
  </div>
</div>
`;

exports[`PersonalityTraitList renders component with more traits 1`] = `
<div
  className="container"
>
  <div
    className="mock"
  >
    Trait - 
    Steady
  </div>
  <div
    className="mock"
  >
    Trait - 
    Forgiving
  </div>
  <div
    className="mock"
  >
    Trait - 
    Can Delay Gratification
  </div>
  <div
    className="mock"
  >
    Trait - 
    Compassionate
  </div>
  <div
    className="mock"
  >
    Trait - 
    Thrill-Seeking
  </div>
  <div
    className="mock"
  >
    Trait - 
    Confident
  </div>
  <div
    className="mock"
  >
    Trait - 
    Imaginative
  </div>
  <div
    className="mock"
  >
    Trait - 
    Open-Minded
  </div>
  <div
    className="mock"
  >
    Trait - 
    Ambitious
  </div>
  <div
    className="mock"
  >
    Trait - 
    Playful
  </div>
  <div
    className="mock"
  >
    Trait - 
    Robust
  </div>
  <div
    className="mock"
  >
    Trait - 
    Altruistic
  </div>
  <div
    className="mock"
  >
    Trait - 
    Accommodating
  </div>
  <div
    className="mock"
  >
    Trait - 
    Interactive
  </div>
  <div
    className="mock"
  >
    Trait - 
    Enthusiastic
  </div>
  <div
    className="mock"
  >
    Trait - 
    Committed
  </div>
  <div
    className="mock"
  >
    Trait - 
    Loyal
  </div>
  <div
    className="mock"
  >
    Trait - 
    Self-Discipline
  </div>
  <div
    className="mock"
  >
    Trait - 
    Easy-Going
  </div>
  <div
    className="mock"
  >
    Trait - 
    Regulated
  </div>
  <div
    className="mock"
  >
    Trait - 
    Calm
  </div>
  <div
    className="mock"
  >
    Trait - 
    Attention-Seeking
  </div>
  <div
    className="mock"
  >
    Trait - 
    Positive
  </div>
  <div
    className="mock"
  >
    Trait - 
    High-Energy
  </div>
  <div
    className="mock"
  >
    Trait - 
    Whimsical
  </div>
  <div
    className="mock"
  >
    Trait - 
    Visionary
  </div>
  <div
    className="mock"
  >
    Trait - 
    Friendly
  </div>
  <div
    className="mock"
  >
    Trait - 
    Deliberate
  </div>
  <div
    className="mock"
  >
    Trait - 
    Orderliness
  </div>
  <div
    className="mock"
  >
    Trait - 
    Creative
  </div>
  <div
    className="center"
  >
    <button
      className="toggle"
      onClick={[Function]}
      type="button"
    >
      Show Less
    </button>
  </div>
</div>
`;

exports[`PersonalityTraitList renders nothing if disabled 1`] = `null`;

exports[`PersonalityTraitList renders nothing if not ready 1`] = `null`;
